# onnxruntime-mps

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: bench.yml  ci.yml  publish-legacy.yml  publish.yml
docs/: COMPILED_CAPTURE.md  DESIGN.md  OP_ARCHITECTURE.md
examples/traces/: README.md  perch-audio-encoder.json
include/onnxruntime_mlx/: metal_ep.h  version.h
python/: hatch_build.py  pyproject.toml
python-legacy/: README.md  pyproject.toml
python-legacy/src/onnxruntime_mlx/: __init__.py
python/src/: _core.cpp
python/src/onnxruntime_ep_mlx/: __init__.py
rust/: Cargo.toml  README.md  build.rs  stress_norm_attn.py
rust/src/: compiled.rs  engine.rs  ep.rs  factory.rs  lib.rs  registry.rs  trace.rs
rust/src/ops/: attention.rs  controlflow.rs  conv.rs  elementwise.rs  math.rs  matmul.rs  misc.rs  mod.rs  norm.rs  quant.rs  random.rs  recurrent.rs  reduction.rs  shape.rs  signal.rs  ssm.rs  stragglers.rs  vision.rs
src/dtype/: dtype_traits.h
src/ep/: allocator.h  data_transfer.cc  entry.cc  ep.cc  ep.h  ep_factory.cc  ep_factory.h  metal_context.h  metal_context.mm  mlx_backend.cc  mlx_backend.h  mlx_engine.h  op_claim.h  op_registry.cc  op_registry.h
src/ep/ops/: attention.cc  attention_ext.cc  bitwise.cc  controlflow.cc  conv.cc  elementwise.cc  math.cc  matmul.cc  norm.cc  norm_ext.cc  normpool.cc  quant.cc  reduction.cc  reduction2.cc  shape.cc  signal.cc  ssm_misc.cc  vision2.cc
src/kernels/: gqa.metal
src/ops/: README.md  op_registry.h
tests/backend/: test_onnx_backend.py
tests/conformance/: RESULTS.md  results.csv
tests/kernels/: mariette_kernel_test.cc  ort_reference_test.py
tests/ops/: _models.py  mlx_op_test.py  test_attention_ext.py  test_conv.py  test_elementwise_ops.py  test_exp_logic.py  test_exp_normpool.py  test_exp_vision2.py  test_gaps_compute.py  test_gaps_math.py  test_gathernd.py  test_gqa11.py  test_matmulnbits_asym.py  test_mlx_ops.py  test_norm_ext.py  test_qmoe.py  test_rem_controlflow.py  test_resize.py  test_shape.py
