[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

# Final compatibility release of the OLD `onnxruntime-mlx` distribution: it has been
# renamed to `onnxruntime-ep-mlx`. This is a tiny PURE-PYTHON shim (no dylib, builds
# anywhere) that depends on and re-exports the new package so existing
# `import onnxruntime_mlx` keeps working, while emitting a DeprecationWarning.
[project]
name = "onnxruntime-mlx"
version = "0.2.3"
description = "Renamed to onnxruntime-ep-mlx — install onnxruntime-ep-mlx instead."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "onnxruntime-ep-mlx" }]
keywords = ["onnxruntime", "mlx", "execution-provider", "apple-silicon", "deprecated", "renamed"]
dependencies = ["onnxruntime-ep-mlx>=0.2.3"]
classifiers = [
  "Development Status :: 7 - Inactive",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/justinchuby/onnxruntime-mlx"
Repository = "https://github.com/justinchuby/onnxruntime-mlx"
"Renamed to" = "https://pypi.org/project/onnxruntime-ep-mlx/"

[tool.hatch.build.targets.wheel]
packages = ["src/onnxruntime_mlx"]
