[build-system]
requires = ["hatchling>=1.24", "delocate>=0.11"]
build-backend = "hatchling.build"

[project]
name = "onnxruntime-mlx"
version = "0.2.0"
description = "MLX-native ONNX Runtime execution provider (plugin EP) for Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "onnxruntime-mlx" }]
keywords = ["onnxruntime", "mlx", "execution-provider", "apple-silicon", "metal", "coreml"]
dependencies = ["onnxruntime>=1.22"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/justinchuby/onnxruntime-mlx"
Repository = "https://github.com/justinchuby/onnxruntime-mlx"

# --- Hatchling wheel build ----------------------------------------------------
# The execution provider is a Rust `cdylib` (../rust). It is NOT a Python
# extension module, so there is no compiled Python surface to build: the Python
# layer (onnxruntime_mlx/__init__.py) is a *pure-Python locator* that only finds
# and registers the bundled dylib. The custom build hook (hatch_build.py):
#   1. runs `cargo build --release` in ../rust (honouring ORT_INCLUDE_DIR / ORT_HOME),
#   2. bundles the cargo-built libonnxruntime_mlx_ep.dylib + the mlx-c/mlx runtime
#      (via delocate) into the package, relinked to @loader_path,
#   3. forces a platform wheel tag (py3-none-macosx_*_arm64) — one wheel that
#      installs on CPython 3.10-3.13 AND the free-threaded (3.13t/3.14t) builds,
#      because it ships no CPython-ABI-bound extension. abi3audit has nothing to
#      audit (no extension modules) so `abi3audit --strict` is trivially clean.
#
# Why pure-Python instead of maturin+pyo3: `_core` was only ever a locator
# (ep_name/version/library_path). A compiled pyo3 abi3 extension cannot also be
# free-threaded (abi3 wheels are unsupported under Py_GIL_DISABLED), so "abi3 AND
# abi3t" would force *separate* per-version cp313t/cp314t wheels. Shipping zero
# native Python code sidesteps that entirely: one platform wheel serves every
# interpreter (GIL and free-threaded alike) and is abi3audit-clean by construction.

[tool.hatch.build.targets.wheel]
packages = ["src/onnxruntime_mlx"]
# The dylibs / metallib are placed into the package dir by the build hook.
artifacts = [
  "src/onnxruntime_mlx/*.dylib",
  "src/onnxruntime_mlx/*.metallib",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
# The sdist carries the Python layer + the build hook. Wheels are built from a
# full repo checkout (where ../rust is present) so the hook can run cargo.
include = [
  "src/onnxruntime_mlx",
  "hatch_build.py",
  "README.md",
]
