[package]
name = "onnxruntime-ep-mlx"
version = "0.2.3"
edition = "2024"
description = "MLX-native ONNX Runtime execution provider (plugin EP) for Apple Silicon — binds mlx-c directly, no mlx-rs."
license = "MIT"
repository = "https://github.com/justinchuby/onnxruntime-mlx"
readme = "README.md"
keywords = ["onnx", "onnxruntime", "mlx", "apple-silicon", "metal"]
categories = ["science", "api-bindings", "hardware-support"]
# Keep repo-only tooling out of the published crate: the *.py files are leak-check /
# tracing scripts run by CI from the repo (not part of the Rust crate).
exclude = ["*.py"]

[lib]
# Pin the lib (and therefore dylib) name so it stays `libonnxruntime_mlx_ep.dylib`
# regardless of the crate name — the Python package, tests, CI and onnx-genai all
# load the plugin by that exact filename.
name = "onnxruntime_mlx_ep"
crate-type = ["cdylib"]

[dependencies]
# Pure-Rust Chrome/Perfetto tracer. `default-features = false` drops the
# `perfetto` (prost) feature — we export Chrome Trace JSON only. Kept as a `path`
# dependency for local dev (sibling onnx-genai checkout) with a matching
# `version` so `cargo publish` resolves it from crates.io (path is stripped at
# publish time; publishing onnxruntime-ep-mlx requires this crate to be on
# crates.io first).
onnx-runtime-tracer = { path = "../../onnx-genai/crates/onnx-runtime-tracer", version = "0.1.0-dev.2", default-features = false }

[build-dependencies]
bindgen = "0.72"

[profile.release]
# Unwind (not abort) so panics can be caught at every C-ABI boundary (see
# `guard_ffi_status` in lib.rs and the trace_thunk catch_unwind): a plugin loaded into a
# host process must degrade to an error, never take the host down. Every extern-"C" entry
# that runs real logic is wrapped, and the MLX trace callback catches locally, so a panic
# never unwinds across the FFI boundary (which would be UB).
panic = "unwind"
